fix size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
     }
 
     .note-normal{
-      @apply transition-all hover:border-white border-2 cursor-pointer border-transparent ease-in-out duration-500   w-fit h-fit px-10 pt-5 pb-2 m-4  hover:shadow-lg hover:scale-105 relative;
+      @apply transition-all hover:border-white border-2 cursor-pointer border-transparent ease-in-out duration-500   w-fit h-fit sm:px-10 px-5 pt-5 pb-2 m-4  hover:shadow-lg hover:scale-105 relative;
     }
 
     .note-wrapper-triggered {
@@ -60,7 +60,7 @@
     }
 
     .color-item{
-      @apply border-2 border-transparent cursor-pointer sm:w-6 w-6 aspect-square
+      @apply border-2 border-transparent cursor-pointer sm:w-6 w-8 flex-shrink h-4 sm:aspect-auto
       rounded-full hover:shadow-xl hover:border-yellow-900    ease-in-out transition-all duration-300  mt-4 mx-1 sm:px-4 p-0 sm:pt-3  shadow-md
       ;
     }
